--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,31 @@
     <h1>Guia perguntas!</h1>
     <hr>
     <h3>Lista de perguntas</h3>
+
+    <p>Nome: <%= nome %>
+    </p>
+    <p>Linguagem favorita: <%= lang %>
+    </p>
+    <p>Empresa que trabalha: <%= empresa %>
+    </p>
+    <p>Número de inscritos: <%= inscritos %>
+    </p>
+
+    <% if(msg){ %>
+        <h3>Isso é uma msg de erro!</h3>
+    <%} else {%>
+        <h3>Não tem erro nenhum amigo</h3>
+    <%} %>
+
+    <% produtos.forEach ((produto) => { 
+        %>
+            <hr>
+            <h3><%= produto.nome %></h4>
+            <h5><%= produto.preco %></h5>
+        <%
+    }) %>
+
+
 </body>
 
 </html>
