--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,37 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guia perguntas</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
 
 <body>
-    <h1>Guia perguntas!</h1>
-    <hr>
-    <h3>Lista de perguntas</h3>
+    <h1>estilo bootstrap</h1>
 
-    <p>Nome: <%= nome %>
-    </p>
-    <p>Linguagem favorita: <%= lang %>
-    </p>
-    <p>Empresa que trabalha: <%= empresa %>
-    </p>
-    <p>Número de inscritos: <%= inscritos %>
-    </p>
-
-    <% if(msg){ %>
-        <h3>Isso é uma msg de erro!</h3>
-    <%} else {%>
-        <h3>Não tem erro nenhum amigo</h3>
-    <%} %>
-
-    <% produtos.forEach ((produto) => { 
-        %>
-            <hr>
-            <h3><%= produto.nome %></h4>
-            <h5><%= produto.preco %></h5>
-        <%
-    }) %>
-
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </body>
 
 </html>
